--- a/style.css
+++ b/style.css
@@ -649,145 +649,15 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     display: none
 }
 
-.bck-title-9 {
-    color: #f03f23;
-    font-size: 3.2rem;
-    text-align: left;
-    padding-left: 20px;
-    font-weight: 700;
-    font-family: JacobyICG
-}
-
 .bck-title-2 {
     color: #EC6F59;
-    font-size: 2.4rem;
+    font-size: 2.5rem;
     text-align: left;
-    /*font-family: Conv_FuturaStd-Book*/
+    font-family: 'ZineSlabDisOT-Medi';
     padding-top: 10px;
 }
 
-.bck-title-3 {
-    color: #009fa5;
-    background-color: #d8edee;
-    font-size: 3.2rem;
-    text-align: left;
-    padding: 5px 5px 0
-}
 
-.bck-title-3,.bck-title-6 {
-    width: fit-content;
-    font-weight: 500;
-    font-family: Conv_FuturaStd-Medium
-}
-
-.bck-title-6 {
-    display: inline-block;
-    color: #fff;
-    background-color: #f18800;
-    font-size: 2.2rem;
-    position: relative;
-    border-radius: 20px 0 0 20px;
-    margin-left: -28px;
-    padding: 5px 10px 6px 0
-}
-
-.bck-title-6:before {
-    background-image: url(images/icono_highAchivers.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 24px 44px 0 24px;
-    position: relative;
-    left: -3px;
-    z-index: 100;
-    top: 12px
-}
-
-.bck-title-7 {
-    background: #a2c626;
-    margin-top: 0
-}
-
-.bck-title-7,.bck-title-8 {
-    color: #fff;
-    font-size: 2rem;
-    width: fit-content;
-    position: relative;
-    text-align: left;
-    padding: 7px 20px 7px 54px;
-    left: -97px;
-    font-weight: 700;
-    font-family: Conv_FuturaStd-Book
-}
-
-.bck-title-8 {
-    background: #b83187
-}
-
-.bck-title-4 {
-    color: #fff;
-    font-size: 2rem;
-    background: #f18800;
-    width: fit-content;
-    position: relative;
-    text-align: left;
-    padding: 7px 20px 7px 54px;
-    left: -97px;
-    font-weight: 700;
-    font-family: Conv_FuturaStd-Book;
-    margin-top: 0
-}
-
-.bck-title-10 {
-    background-color: #f0e500;
-    margin-left: -2.5%;
-    margin-top: 4%
-}
-
-.bck-title-10,.bck-title-11 {
-    font-weight: 600;
-    padding: 9px 15px;
-    font-size: 1.8rem;
-    width: fit-content
-}
-
-.bck-title-11 {
-    display: inline-block;
-    background-color: #353533;
-    color: #fff
-}
-
-.bck-title-12 {
-    color: #009fa5;
-    font-size: 2.3rem;
-    text-align: left;
-    font-family: Conv_FuturaStd-Medium;
-    font-weight: 500;
-    position: relative;
-    left: 7px
-}
-
-.bck-title-13 {
-    background-color: #00acb3;
-    padding: 10px
-}
-
-.bck-title-13,.bck-title-14 {
-    color: #fff;
-    font-size: 2.3rem;
-    font-family: Conv_FuturaStd-Medium;
-    font-weight: 500;
-    position: relative;
-    left: 0;
-    width: fit-content;
-    border-radius: 50px;
-    font-weight: 700
-}
-
-.bck-title-14 {
-    background-color: #2e73b9;
-    padding: 10px 13px
-}
 
 /*enfasis*/
 /*.bck-enfasis {
@@ -804,15 +674,13 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 
 .bck-enfasis-2 {
     font-size: 2rem;
-    /* font-family: Conv_FuturaStd-Medium; */
     color: #2298D4;
     font-weight: 500;
     font-style: italic;
 }
 
 .bck-enfasis-3 {
-    font-size: 2.3rem;
-    /* font-family: Conv_FuturaStd-Medium; */
+    font-size: 2rem;
     color: #6C808B;
     font-weight: 500;
     font-style: italic;
@@ -1347,7 +1215,6 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 .bck-box-1 .bck-content {
     text-align: left;
     padding: 0;
-    font-family: Conv_FuturaStd-Bold
 }
 
 .bck-box-1 .bck-content p {
@@ -2203,7 +2070,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     background-size: contain;
     background-position: 50%;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: sub;
     height: 22px;
     width: 33px;
     margin-right: 5px
@@ -2777,7 +2644,7 @@ table td.bck-td-10 {
 }
 
 .slide_main input:focus {
-    border-color: #f5d9b7;
+    border-color: #5aaa7f99;
 }
 
 /*activitytag*/
@@ -2800,6 +2667,13 @@ table td.bck-td-10 {
 .activitytag_vocabulary #actividad .content .workspace ul li .bck-ol-1 li:before, 
 .activitytag_vocabulary #actividad .popover-content .bck-ol-1 li:before {
     color: #208FCF;
+}
+
+.activitytag_vocabulary #actividad .content .cke_contents .bck-ul-1 li:before, 
+.activitytag_vocabulary #actividad .content .texto_curso ul.bck-ul-1 li:before, 
+.activitytag_vocabulary #actividad .popover-content ul.bck-ul-1 li:before, 
+.activitytag_vocabulary #actividad .content .workspace ul li ul.bck-ul-1 li:before {
+    background-color: #BED5EE;
 }
 
 /*activitytag_grammar*/
@@ -2875,7 +2749,7 @@ table td.bck-td-10 {
 .activitytag_listening #actividad .content .texto_curso ul.bck-ul-1 li:before,
 .activitytag_listening #actividad .popover-content ul.bck-ul-1 li:before,
 .activitytag_listening #actividad .content .workspace ul li ul.bck-ul-1 li:before {
-    backgrouactivitytag_listeningnd-color: #D2E0BD;
+    background-color: #D2E0BD;
 }
 
 .activitytag_listening .bck-box.bck-box-2 .bck-content {
